# porttracker-aiscatcher

./: .gitignore  Concept-sending-nmea.txt  README.md  dashboard_index.html  history.json  settings.gradle.kts  settings_renderer.js  update-manifest.json
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/assets/web/: index.html  settings_renderer.js
app/src/main/jni/: CMakeLists.txt
app/src/main/jni/airspyhf/libairspyhf/src/: airspyhf.c
app/src/main/jni/airspyone_host/libairspy/src/: airspy.c  airspy.h
app/src/main/jni/rtl-sdr/: README
app/src/main/jni/rtl-sdr/src/: librtlsdr.c
app/src/main/kotlin/com/jvdegithub/aiscatcher/: AisCatcherJava.kt
app/src/main/kotlin/com/porttracker/ais/: AdminWebServer.kt  AisReceiverService.kt  BootReceiver.kt  ConfigurationManager.kt  DebugReceiver.kt  ForceStartActivity.kt  FrpTunnelManager.kt  GpsForwarder.kt  InternalLog.kt  MqttPublisher.kt  NetworkUtils.kt  SettingsActivity.kt  SupportedDevices.kt  TrustedDocksApi.kt  UpdateManager.kt  UsbDeviceReceiver.kt  UsbDeviceScanner.kt  VesselCacheWriter.kt  VesselDatabase.kt
app/src/main/res/values/: arrays.xml  strings.xml  themes.xml
app/src/main/res/xml/: file_provider_paths.xml  preferences.xml  preferences_control.xml  preferences_networking.xml  preferences_settings.xml  preferences_status.xml  usb_device_filter.xml
docs/specs/: internal-vessel-cache.md  vessel-position-history.md
scripts/: fetch-frpc.sh  vendor-native.sh
